Make ggplot2 purrr
https://www.r-bloggers.com/make-ggplot2-purrr/

--- a/Install-Packages.Rmd
+++ b/Install-Packages.Rmd
@@ -599,6 +599,13 @@ if(!require(bmp)){
 library(bmp)
 
 #-----------------------------------
+if(!require(ggthemes)){
+  install.packages("ggthemes")
+}
+library(ggthemes)
+
+#-----------------------------------
+
 
 
 
