Data Science for Operational Excellence (Part-1)
http://www.r-exercises.com/2017/04/06/data-science-for-operational-excellence-part-1-exercises/

--- a/Install-Packages.Rmd
+++ b/Install-Packages.Rmd
@@ -605,7 +605,18 @@ if(!require(ggthemes)){
 library(ggthemes)
 
 #-----------------------------------
+if(!require(lpSolve)){
+  install.packages("lpSolve")
+}
+library(lpSolve)
 
+#-----------------------------------
+if(!require(igraph)){
+  install.packages("igraph")
+}
+library(igraph)
+
+#-----------------------------------
 
 
 
