--- a/Data Visualization – Part 3.Rmd
+++ b/Data Visualization – Part 3.Rmd
@@ -24,6 +24,7 @@ library(lubridate)
 library(scales)
 library(stringr)
 library(zoo)
+library(scatterplot3d)
 
 data <- read.csv("C:\\Users\\user\\Documents\\GitHub\\R-Bloggers-1\\data.csv")
 head(data)
@@ -65,6 +66,18 @@ p + geom_line(stat = 'identity') +
   theme(axis.text.x = element_text(angle = 90, hjust = 1)) +
   facet_wrap(~Export.Continent) +
   scale_y_continuous(labels = comma)
+
+
+# Relationship – Scatter Plot
+
+p = ggplot(data, aes(x= Asia, y = Europe, col = Month))
+p + geom_point() + 
+  scale_y_continuous(labels = comma) +
+  scale_x_continuous(labels = comma) +
+  ggtitle('Alu Import - Asia vs Europe') + 
+  theme(plot.title = element_text(hjust = 0.5))
+
+
 
 
 
