Web Scraping and Applied Clustering Global Happiness and Social Progress Index
https://www.r-bloggers.com/web-scraping-and-applied-clustering-global-happiness-and-social-progress-index/

--- a/Install-Packages.Rmd
+++ b/Install-Packages.Rmd
@@ -617,7 +617,24 @@ if(!require(igraph)){
 library(igraph)
 
 #-----------------------------------
+if(!require(FactoMineR)){
+  install.packages("FactoMineR")
+}
+library(FactoMineR)
 
+#-----------------------------------
+if(!require(factoextra)){
+  install.packages("factoextra")
+}
+library(factoextra)
+
+#-----------------------------------
+if(!require(useful)){
+  install.packages("useful")
+}
+library(useful)
+  
+#-----------------------------------
 
 
 ```
