Data Science for Operational Excellence (Part-3)
https://www.r-bloggers.com/data-science-for-operational-excellence-part-3/

--- a/Install-Packages.Rmd
+++ b/Install-Packages.Rmd
@@ -635,6 +635,12 @@ if(!require(useful)){
 library(useful)
   
 #-----------------------------------
+if(!require(fields)){
+  install.packages("fields")
+}
+library(fields)
+
+#-----------------------------------
 
 
 ```
