Machine Learning. Linear Regression Full Example (Boston Housing).
http://feedproxy.google.com/~r/RBloggers/~3/BSm1mJgu0mA/?utm_source=feedburner&utm_medium=email

--- a/Install-Packages.Rmd
+++ b/Install-Packages.Rmd
@@ -641,6 +641,12 @@ if(!require(fields)){
 library(fields)
 
 #-----------------------------------
+if(!require(ISLR)){
+  install.packages("ISLR")
+}
+library(ISLR)
+
+#-----------------------------------
 
 
 ```
